samples/_failures_safe/1761728833_5064bd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_982eb396.c: In function ‘main’:
./samples/SAFE/__tmp_982eb396.c:147:9: error: ‘str’ undeclared (first use in this function)
  147 |     if (str
      |         ^~~
./samples/SAFE/__tmp_982eb396.c:147:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_982eb396.c:147:12: error: expected ‘)’ at end of input
  147 |     if (str
      |        ~   ^
      |            )
./samples/SAFE/__tmp_982eb396.c:147:5: error: expected declaration or statement at end of input
  147 |     if (str
      |     ^~
